--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -6,7 +6,10 @@ body{
   @include kingvfont;
 }
 .step:not(.active):not(.present):not(.past){
-  display:none;
+  //display:none;
+  p[class*=ready]{
+    opacity:0;
+  }
 }
 .mainletter{
   font-size:100px !important;
